--- a/index.html.erb
+++ b/index.html.erb
@@ -107,11 +107,11 @@
   <ul>
     <li>
       Simple/pragmatic solutions<br />
-      <%= projects 'parallel', 'parallel_tests', 'url_store', 'tracked_plugins', 'random_records', 'text_filter', 'db_graph', 'smusher', 'rpx_now', 'fallback', 'scopify', 'restful_catch_all_route', 'cachy' %><br />
+      <%= projects 'parallel', 'url_store', 'bitfields', 'tracked_plugins', 'random_records', 'text_filter', 'db_graph', 'smusher', 'rpx_now', 'fallback', 'scopify', 'restful_catch_all_route', 'cachy', 'string19', 'mini_memory_store', 'solr_collection', 'preheatable_cache' %><br />
     </li>
     <li>
       TDD<br />
-      <%= projects 'parallel_tests', 'single_test', 'autotest', 'rspec_enhanced_profile' %>,<br />
+      <%= projects 'parallel_tests', 'single_test', 'rspec-instafail', 'rspec_enhanced_profile' %>,<br />
       see test coverage of other Ruby/JS projects
     </li>
     <li>
@@ -134,6 +134,10 @@
       <%= link_to 'Actionview helpers on string', 'http://pragmatig.com/2009/05/30/all-actionview-helpers-on-strings/' %>,
       ...
     </li>
+    <li>
+      Crazy stuff<br />
+      <%= projects 'rube_post', 'ha_plus', 'ruco', 'gem-dependent' %>
+    </li>
     <li>Ruby on Rails + Sinatra + Middleware</li>
   </ul>
 
@@ -141,7 +145,7 @@
   <ul>
     <li>native: Ruby, HTML, JS, CSS</li>
     <li>fluent: SQL, Regexp, Markdown, RDoc, Git, Mongo, Redis</li>
-    <li>human: native German + fluent English + basic Chinese/Vietnamese/Russian/Latin</li>
+    <li>human: native German + fluent English</li>
   </ul>
 </div>
 </body>
