--- a/index.html.erb
+++ b/index.html.erb
@@ -45,7 +45,7 @@
   </div>
 
   <%= clearer %>
-  
+
   <h1 class="centered">
     <%= link_to 'Michael Grosser', "http://github.com/grosser" %>
   </h1>
@@ -111,7 +111,7 @@
   <ul>
     <li>
       Simple/pragmatic solutions<br />
-      <%= projects 'parallel', 'url_store', 'bitfields', 'tracked_plugins', 'random_records', 'text_filter', 'db_graph', 'smusher', 'rpx_now', 'fallback', 'scopify', 'restful_catch_all_route', 'cachy', 'string19', 'mini_memory_store', 'solr_collection', 'preheatable_cache' %><br />
+      <%= projects 'parallel', 'url_store', 'bitfields', 'pru', 'tracked_plugins', 'random_records', 'text_filter', 'db_graph', 'smusher', 'rpx_now', 'fallback', 'scopify', 'restful_catch_all_route', 'cachy', 'string19', 'mini_memory_store', 'solr_collection', 'preheatable_cache' %><br />
     </li>
     <li>
       TDD<br />
