--- a/index.html.erb
+++ b/index.html.erb
@@ -58,6 +58,10 @@
     1983-11-21
   </p>
 
+  <p>
+    Full stack engineer focused in Ruby / Rails and various backend technologies.
+  </p>
+
   <h3>Goals</h3>
   <ul>
     <li>Build great products with Ruby/Ruby on Rails.</li>
@@ -77,18 +81,16 @@
       </small>
     </li>
     <li>
-      <em>2012-present</em> Rails Engineer at Zendesk.com (San Francisco)<br />
+      <em>2012-present</em> Senior Staff Engineer at Zendesk.com (San Francisco)<br />
       <small>
-        Cloud helpdesk.<br/>
         Backend engineering and tooling for api/authentificaion/email/developer productivity.<br/>
-        Help developer standardization via boxen, rails 2 -> 3 upgrades without downtime on giant app.
       </small>
     </li>
     <li>
       <em>2011-2012</em> Rails Engineer at PivotalLabs.com (San Francisco)<br />
       <small>
-        Awesome web-consultancy.<br/>
-        Rails, Postgres, Heroku, Git, Sass, jQuery, Backbone and a teaspoon of Ember.js
+        Web-consultancy.<br/>
+        Helped clients with Rails, Postgres, Heroku, Git, Sass, jQuery, Backbone and Ember.js
       </small>
     </li>
     <li>
@@ -159,14 +161,6 @@
       <%= link_to_project 'ruco' %> (commandline editor),
       <%= projects 'gem_on_demand', 'gem-dependent', 'autoscaling', 'key_value' %>
     </li>
-    <li>and tons <%= link_to 'more...', 'https://github.com/grosser' %></li>
-  </ul>
-
-  <h3>Languages</h3>
-  <ul>
-    <li>native: Ruby, HTML, JS, CSS</li>
-    <li>fluent: SQL, Regexp, Git, Solr, Redis</li>
-    <li>human: native German + fluent English</li>
   </ul>
 </div>
 </body>
