--- a/index.html.erb
+++ b/index.html.erb
@@ -66,24 +66,27 @@
   <ul>
     <li>Build great products with Ruby/Ruby on Rails.</li>
     <li>Embrace simplicity and usability while being innovative and agile.</li>
-    <li>Sharing knowledge and learning from a great team that lives by pairing and TDD.</li>
+    <li>Sharing knowledge and learning with a team that lives by pairing and TDD.</li>
     <li>Contribute to Open-source.</li>
   </ul>
 
   <h3>Experience</h3>
   <ul>
     <li>
+      <em>2012-present</em> Senior Staff Engineer at Zendesk.com (San Francisco)<br />
+      <small>
+        Backend engineering and tooling for kubernetes/docker/deployment/api/testing/developer productivity.<br/>
+        Created and maintaining many services (deployment support, project organization, service discovery, etc.).<br/>
+        Spreading best-practices around testing/deployment/security/dev-productivity thoughout all projects.<br/>
+        Helped with engineering onboarding, mentoring, and organized pairing sessions.
+      </small>
+    </li>
+    <li>
       <em>2008-present</em> Created & contributed to <%= data["repos"].size %> OS projects<br />
       <small>
         <%= data["repos"].sum{|p| p["stargazers_count"] } %> stars /
         <%= data["repos"].select{|p| not p["fork"] }.sum{|p| p["forks"] } %> forks
         (on own projects)
-      </small>
-    </li>
-    <li>
-      <em>2012-present</em> Senior Staff Engineer at Zendesk.com (San Francisco)<br />
-      <small>
-        Backend engineering and tooling for api/authentificaion/email/developer productivity.<br/>
       </small>
     </li>
     <li>
@@ -124,8 +127,9 @@
     </li>
   </ul>
 
-  <h3>Example projects</h3>
+  <h3>Example open source projects</h3>
   <ul>
+    <li>Deployment orchestration <%= link_to 'samson', "https://github.com/zendesk/samson" %></li>
     <li>
       Small-scale web projects <%= projects 'air_man', 'travis_cron', 'mymarks', 'share_man' %>
     </li>
@@ -135,7 +139,7 @@
     </li>
     <li>
       TDD<br />
-      <%= projects 'parallel_tests', 'test_after_commit', 'parallel_split_test', 'single_test', 'rspec-instafail', 'rspec_enhanced_profile' %>,<br />
+      <%= projects 'parallel_tests', 'single_cov', 'maxitest', 'forking_test_runner', 'test_after_commit', 'parallel_split_test', 'single_test', 'rspec-instafail', 'rspec_enhanced_profile' %>,<br />
       see test coverage of other Ruby/JS projects
     </li>
     <li>
@@ -147,13 +151,10 @@
       <%= link_to 'after_commit exceptions', 'http://grosser.it/2014/07/02/stop-rails-from-swallowing-after_commit-exceptions/' %>
       <%= link_to 'minitest-rerun', 'http://grosser.it/2014/03/29/copy-pasteable-minitest-re-run-commands/' %>
       <%= link_to 'slow_update_all', 'http://grosser.it/2010/08/15/big-updates-block-database-use-slow_update_all/' %>
-      <%= link_to 'mails without paths', 'http://grosser.it/2010/07/04/prevent-paths-in-mails-actionmailer/' %>,
       <%= link_to 'nested attributes sti fix', 'http://grosser.it/2010/06/04/fixing-rails-nested-attributes-on-collections-with-sti/' %>,
       <%= link_to 'memcache io timeout fix', 'http://grosser.it/2010/01/06/fixing-memcache-io-timeout-for-memcache-client/' %>,
-      <%= link_to 'descriptive raise', 'http://grosser.it/2009/10/15/descriptive-raise-tired-of-exception-classobject-expected/' %>,
       <%= link_to 'method parameter reflection', 'http://grosser.it/2009/07/05/ruby-monkey-reflection-to-get-method-parameter-names/' %>,
       <%= link_to 'Array.to_ordered_hash', 'http://grosser.it/2009/06/08/array-to_ordered_hash-replacement-for-rails-2-3-activesupportorderedhash-new/' %>,
-      <%= link_to 'Actionview helpers on string', 'http://grosser.it/2009/05/30/all-actionview-helpers-on-strings/' %>,
       ...
     </li>
     <li>
