--- a/index.html.erb
+++ b/index.html.erb
@@ -57,26 +57,43 @@
   </p>
 
   <p>
-    Full stack engineer focused in Ruby / Rails and various backend technologies.
+    Tech lead focused on Kubernetes, Ruby, Go.
   </p>
 
   <h3>Goals</h3>
   <ul>
-    <li>Build great products with Ruby/Ruby on Rails.</li>
-    <li>Embrace simplicity and usability while being innovative and agile.</li>
-    <li>Sharing knowledge and learning with a team that lives by pairing and TDD.</li>
+    <li>Build simple but powerful developer experiences.</li>
+    <li>Sharing knowledge and learning with a team, that focuses on simple solutions, built on quick iterations.</li>
     <li>Contribute to Open-source.</li>
   </ul>
 
   <h3>Experience</h3>
   <ul>
     <li>
-      <em>2012-present</em> Senior Staff Engineer at Zendesk.com (San Francisco)<br />
+      <em>2020-2022</em> Group Tech Lead & Senior Staff Engineer at Zendesk.com (San Francisco)<br />
       <small>
-        Backend engineering and tooling for kubernetes/docker/deployment/api/testing/developer productivity.<br/>
-        Created and maintaining many services (deployment support, project organization, service discovery, etc.).<br/>
-        Spreading best-practices around testing/deployment/security/dev-productivity thoughout all projects.<br/>
-        Helped with engineering onboarding, mentoring, and organized pairing sessions.
+        Backend engineering and tooling for kubernetes/deployment/SRE/developer productivity.<br/>
+        Created and maintained many services (deployment support, project organization, service discovery, etc.).<br/>
+        Spreading testing/deployment/security/dev-productivity best-practices through the engineering org.<br/>
+        Helping with engineering onboarding, mentoring, and pairing.
+      </small>
+    </li>
+    <li>
+      <em>2016-2018</em> Lech Lead & Senior Staff Software Engineer at Zendesk.com (San Francisco)<br />
+      <small>
+        Building PAAS based on Kubernetes and migrating 90+% of resources there without downtime.
+      </small>
+    </li>
+    <li>
+      <em>2014-2016</em> Staff Software Engineer at Zendesk.com (San Francisco)<br />
+      <small>
+        Initial member of Compute team to build POC and lead transition from datacenter to AWS.
+      </small>
+    </li>
+    <li>
+      <em>2012-2014</em> Senior Software Engineer at Zendesk.com (San Francisco)<br />
+      <small>
+        Working as "office of the CTO" to fix organization cross-cutting concerns that need attention and have no clear owner.
       </small>
     </li>
     <li>
